--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,6 +36,7 @@ subjects:
 - !lcsh 'Indians of North America -- Wars -- 1866-1895'
 - !lcsh 'West (U.S.) -- Description and travel'
 - !lcsh 'Frontier and pioneer life -- West (U.S.)'
+- GITenberg
 tableOfContents: Chasing a major-general -- Lieutenant Casey's last scout -- The Sioux
   outbreak in South Dakota -- An outpost of civilization -- A rodeo at Los Ojos --
   In the Sierra Madre with the punchers -- Black water and shallows -- Coaching in
